--- a/src/PokemonList/style.scss
+++ b/src/PokemonList/style.scss
@@ -1,4 +1,4 @@
-.pokemon-container{
+.pokemon-container {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -6,10 +6,126 @@
     margin: 0 auto;
     list-style: none;
     gap: 20px;
-    .pokemon-card{
+    justify-content: center;
+    padding-inline-start: 0px;
+    padding: 0 10px;
+    .pokemon-card {
         max-width: 140px;
         width: 100%;
         border-radius: 8px;
         border: 1px solid #f1f1ff;
+        a{
+            text-decoration: none;
+            .pokemon-img{
+                background-color: #f1f1ff;
+                width: 100%;
+                img {
+                    max-width: 140px;
+                    width: 100%;
+                    object-fit: cover;
+                }
+            }
+            h3 {
+                color: #464646;
+                text-align: center;
+                &:first-letter{
+                    text-transform: uppercase;
+                }
+            }
+            .pokemon-body{
+                .pokemon-types{
+                    /* padding: 10px; */
+                    display: flex;
+                    flex-direction: row;
+                    gap: 10px;
+                    justify-content: center;
+                    align-items: center;
+                    transform: skew(10deg);
+                    p {
+                        margin: 0;
+                        padding: 10px 0;
+                        width: 100%;
+                        display: flex;
+                        justify-content: center;
+                        span{
+                            color: #fff;
+                            transform: skew(-10deg);
+                        }
+                        &.grass {
+                            background-color: #3f9609;
+                        }
+            
+                        &.fire {
+                            background-color: #f67e0d;
+                        }
+            
+                        &.water {
+                            background-color: #0a79be;
+                        }
+            
+                        &.electric {
+                            background-color: #fffa25;
+                        }
+            
+                        &.poison {
+                            background-color: #a819d7;
+                        }
+            
+                        &.flying {
+                            background-color: #5eb9b4;
+                        }
+            
+                        &.bug {
+                            background-color: #bddd6e;
+                        }
+            
+                        &.normal {
+                            background-color: #ccc9aa;
+                        }
+            
+                        &.ground {
+                            background-color: #e2d25b;
+                        }
+            
+                        &.fairy {
+                            background-color: #ffa0c2;
+                        }
+            
+                        &.fighting {
+                            background-color: #e8121a;
+                        }
+            
+                        &.psychic {
+                            background-color: #ed0f64;
+                        }
+            
+                        &.rock {
+                            background-color: #786b3f;
+                        }
+            
+                        &.steel {
+                            background-color: #7b8e8a;
+                        }
+            
+                        &.ice {
+                            background-color: #1a94a3;
+                        }
+            
+                        &.dragon {
+                            background-color: #8b56fe;
+                        }
+            
+                        &.dark {
+                            background-color: #604733;
+                        }
+                        &.ghost {
+                            background-color: #8f54a4;
+                        }
+                    }
+                }
+            }
+
+        }
+
     }
 }
